# aterra-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  reset_db.sh
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 2025-11-17-07-31_99701a9b80f2_initial_migration.py  2025-11-19-17-04_a4678f9d1234_add_prompt_table.py  2025-11-19-19-35_b9c8d7e6f5a4_add_agent_knowledge_link.py  2025-11-19-19-41_c2a1f0d7b6e8_add_knowledge_table.py  2025-11-25-15-12_e3b1c2d4add9_add_knowledge_document_table.py  2025-11-25-18-51_f3c2a1b4add8_add_text_splitter_table.py  2025-11-25-19-15_a1b2c3d4e5f7_add_splitter_type_params_to_text_splitter.py  2025-11-27-21-26_d4e5f6a7b8c9_add_provider_credentials_table.py  2025-11-27-23-47_e7f8a9b0c1d2_enforce_tool_uniqueness_on_tool.py  2025-12-08-06-08_d138da34f3c1_update_tool.py  2025-12-08-08-22_1e0723fcbb1a_update_tool.py
backend/app/: initial_data.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agent.py  auth.py  chat.py  knowledge.py  lake.py  market.py  model.py  plan_act.py  prompt.py  text_splitter.py  tool.py
backend/app/core/: config.py  security.py
backend/app/core/agent/: agent_runner.py  base.py  geoagent.py  history.py  llm_client.py  mock_gis_tools.py  plan_act_agent.py  registry.py  runner.py  streaming.py  tools.py
backend/app/core/model/: __init__.py  llm_factory.py
backend/app/core/prompts/: prompts.py
backend/app/core/rag/: __init__.py  chunker.py  embeddings.py  milvus_store.py
backend/app/core/tool/: schema_extractor.py  tool_loader.py  tool_registry.py  tool_watcher.py
backend/app/crud/: __init__.py  agent_crud.py  base_crud.py  chat_crud.py  knowledge_crud.py  knowledge_document_crud.py  lake_crud.py  mixins.py  model_crud.py  prompt_crud.py  provider_credentials_crud.py  text_splitter_crud.py  tool_crud.py  user_crud.py
backend/app/db/: init_db.py  session.py
backend/app/db/seeds/: seed_tool_types.py
backend/app/models/: __init__.py  agent.py  base.py  base_uuid_model.py  chat.py  knowledge.py  knowledge_document.py  lake_model.py  link.py  model.py  prompt.py  provider_credentials.py  text_splitter.py  tool.py  user.py
backend/app/schemas/: agent.py  chat.py  common.py  knowledge.py  knowledge_document.py  lake_schema.py  market.py  model.py  prompt.py  text_splitter.py  tool.py  user.py
backend/app/services/: market_service.py  model_service.py  rag_service.py
backend/app/utils/: cache.py  credentials_store.py  crypto.py  ephemeral_store.py  fastapi_globals.py  logger.py  map_schema.py  minio_client.py  partial.py  print_model.py  requestvars.py  resize_image.py  snowflake.py  text_re.py  token.py  token_store.py  uuid6.py
backend/app/utils/exceptions/: __init__.py  common_exception.py  user_exceptions.py  user_follow_exceptions.py
backend/docker/: Dockerfile  Dockerfile.base  Dockerfile.runtime
backend/scripts/: create-dbs.sql  tools_db_import.py
backend/tests/agent/: test_plan_act_agent.py
backend/tests/unit/: test_gee_tools.py
docs/: index.md  (+1 more)
(+15 files in other folders)
