[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI backend with SQLModel, Alembic, async stack, and agent/RAG tooling"
readme = "README.md"
license = "MIT"
authors = ["jonra1993 <jon_ra@hotmail.es>"]
homepage = "https://github.com/your-org/your-repo"
repository = "https://github.com/your-org/your-repo"
keywords = ["fastapi", "sqlmodel", "async", "alembic", "rag", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.black]
line-length = 88
target-version = [ "py310", "py311" ]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",    
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__"]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
fastapi = "0.121.2"
sqlmodel = "0.0.27"
cryptography = "^41.0.7"
bcrypt = "^4.1.1"
SQLAlchemy-Utils = "^0.41.1"
SQLAlchemy = "2.0.44"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.21"}
fastapi-cache2 = "^0.2.1"
minio = "7.2.18"
Pillow = "^10.1.0"
watchfiles = "^0.21.0"
asyncer = "0.0.5"
httpx = {extras = ["socks"], version = "^0.28.1"}
pandas = "^2.1.4"
openpyxl = "^3.1.2"
redis = "4.6.0"
fastapi-async-sqlalchemy = "0.6.1"
oso = "0.27.3"
celery = "^5.3.6"
celery-sqlalchemy-scheduler = "0.3.0"
psycopg2-binary = "^2.9.5"
requests = "^2.31.0"
wheel = "^0.42.0"
setuptools = "^69.0.2"
openai = "2.8.0"
fastapi-limiter = "^0.1.5"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
geoalchemy2 = "^0.14.3"
shapely = "^2.0.4"
geopy = "2.4.1"
pydantic = "2.12.4"
pydantic-core = "2.41.5"
tavily = "1.1.0"
typing-extensions = "4.15.0"
watchdog = "6.0.0"
pydantic-settings = "^2.12.0"
email-validator = "^2.3.0"
langchain = "^1.0.7"
deepagents = "^0.2.7"
langchain-openai = "^1.0.3"
tiktoken = "^0.7.0"
python-multipart = "^0.0.20"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"
pymilvus = "^2.6.3"
langchain-milvus = "^0.3.0"
earthengine-api = "^1.7.3"
colorlog = "^6.10.1"
langgraph = "^1.0.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.256"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
bandit = "^1.7.5"
pip-audit = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
